Fix z-index issue w/tweets/embeds

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -5,6 +5,10 @@ body {
   font-weight: 400;
 }
 
+header {
+  z-index: 9999;
+}
+
 /* Typography */
 
 .lekton {
